# e4pipe

./: CMakeLists.txt  README.md
cmake/: e4pipeConfig.cmake.in
include/e4pipe/: infinitybuf.h  infinitypipe.h  infinitypipe_struct.h  infinityseg.h  pipeevent.h  pipeevent_struct.h
src/: infinitybuf.c  infinitypipe-int.h  infinitypipe.c  infinityseg.c  pipeevent-int.c  pipeevent-int.h  pipeevent-st.h  pipeevent.c
